# fast-api

./: .gitignore  alembic.ini  hotels.py  main.py  pyproject.toml  test_async.py
src/: config.py  database.py  main.py
src/api/: auth.py  dependencies.py  hotels.py
src/migrations/: env.py
src/migrations/versions/: 2025_06_30_2159-1c2316316a8d_model_rooms.py  2025_07_30_2335-4563ecbbeed4_add_users.py  2025_07_31_2121-9f97fee012ea_add_users.py  d9c485726ace_model_rooms.py  f3d837c631b3_initial_migration.py
src/models/: __init__.py  hotels.py  rooms.py  users.py
src/repositories/: base.py  hotels.py  rooms.py  users.py
src/schemas/: hotels.py  users.py
